--- a/Start_page.html
+++ b/Start_page.html
@@ -24,7 +24,7 @@ SampleMonitorPane.html
         </tr>
     </table>
     </div>
-<h3 target="sample-energy">$%localizedString(Energy Readings)#$</h3>
+<h3 target="sample-energy">$%localizdString(Energy Readings)#$</h3>
     <div id="sample-energy">
     <table class="datatable">
         <tr>
