--- a/Start_page.html
+++ b/Start_page.html
@@ -50,4 +50,4 @@ instantaneousReadings.initInstantaneousReadings('sample-readings');
  
 </script>
 </div>
-Create new operations++
+Create new operations++++++++
